# OpenCVApplication

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/rong/openCV/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/rong/openCV/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/rong/openCV/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
